--- a/src/App.css
+++ b/src/App.css
@@ -50,7 +50,9 @@
   align-items: center;
 }
 .Cards {
-  border: 1px solid black;
   width: 70%;
   height: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
