--- a/src/App.css
+++ b/src/App.css
@@ -33,6 +33,11 @@
 }
 .Boton {
   width: 100px;
+  border-radius: 5px;
+  background-color: rgb(0, 187, 255);
+  color: white;
+  font-size: 17px;
+  border-color: rgb(0, 187, 255);
 }
 .Contenedor {
   display: flex;
@@ -48,6 +53,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  border-radius: 20px;
 }
 .Cards {
   width: 70%;
